# idp-gitops

./: .env.example  .gitignore  1docker  CI_DEPENDENCIES_FIX.md  CLAUDE.md  CLUSTER_REPO_SETUP_GUIDE.md  DEPENDENCIES_FIX_SUMMARY.md  DOCUMENTATION_INDEX.md  EKS_CLUSTER_ISSUES_FIX.md  EKS_CLUSTER_TEMPLATE_IMPROVEMENTS_SUMMARY.md  EKS_CONFIGURATION_FROZEN.md  EKS_ENHANCED_PROVISIONING_DESIGN.md  EKS_PHASE1_COMPLETION.md  EKS_PROVISIONING_OPERATIONAL_GUIDE.md  EKS_QUICK_VALIDATION_CARD.md  FIXES_APPLIED_COMPLETE_SUMMARY.md  FIX_APPLIED.md  GEMINI.md  GITHUB_ACTIONS_TOKEN_FIX.md  LANGUAGE_SPECIFIC_SKELETONS_FIX.md  MEMORY.md  Makefile  QUICK_FIX_SUMMARY.md  SESSION_COMPLETE_SUMMARY.md  TESTING_QUICK_REFERENCE.md  TESTING_RECOMMENDATIONS.md  TESTING_SUMMARY.md  TWO_IMPORTANT_FIXES.md  VALIDATE_SCORE_FIX.md  broken_frontend.txt  caipe-remediation-log.md  search_verification_report.md  test-templates.sh
.agentic/: ACTIVATION_CHECKLIST.md
.backups/: RECOVERY.md  TAG_REFERENCE.md
.githooks/: pre-push
.github/: CODEOWNERS
docs/: eks-grant-access.md  rbac-permission-policy.md
gitops/: README.md
infrastructure/: Makefile  docker-compose.override.yml  docker-compose.yml  kind-config.yaml
infrastructure/caipe/remediation/mcp/: Makefile  pyproject.toml
infrastructure/caipe/remediation/mcp/mcp_remediation/: __main__.py  server.py
scratch/: find_tokens.py  onboard_team_trigger.js  refactor_eks_composition.py  request_eks_trigger.js  update_tests.py
scripts/: catalog-hygiene.js  catalog-hygiene.sh  check-frozen-integrity.sh  create-iam-roles.sh  emergency-cleanup.sh  (+5 more)
(+252 files in other folders)
